--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,5 @@
+<p>Some of my favorite post-punk and goth songs</p>
+<ol></ol>
 <li>"Love Will Tear Us Apart"</li>
 <li>"Bela Lugosi's Dead"</li>
 <li>"A Forest"</li>
