--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,6 @@
 <p>Some of my favorite post-punk and goth songs</p>
-<ol></ol>
-<li>"Love Will Tear Us Apart"</li>
+<ol><li>"Love Will Tear Us Apart"</li>
 <li>"Bela Lugosi's Dead"</li>
 <li>"A Forest"</li>
 <li>"Nine While Nine"</li>
-<li>"Girlfriend In a Coma"</li>
+<li>"Girlfriend In a Coma"</li></ol>
